--- a/src/components/VirtualMachine/VirtualMachine.module.css
+++ b/src/components/VirtualMachine/VirtualMachine.module.css
@@ -1,11 +1,21 @@
 .vm {
     min-width: 100px;
-    height: 100px;
-    border: 1px solid black
+    height: 90px;
+    margin-bottom: 5px;
+    border: 1px solid black;
+    position: relative;
 }
 
 .name {
     width: 100%;
+    margin-right: 20px;
     text-align: center;
     border-bottom: 1px solid black;
+}
+
+.deleteButton {
+    width: 100%;
+    background: red;
+    border: 1px solid black;
+    cursor: pointer;
 }
