--- a/src/components/Plan/Plan.module.css
+++ b/src/components/Plan/Plan.module.css
@@ -12,3 +12,10 @@
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
+.addButton {
+    width: 100%;
+    height: 50px;
+    background: antiquewhite;
+    border: none;
+}
