Add animation to stats bars showing warning

--- a/src/components/StatsBars/StatsBars.module.css
+++ b/src/components/StatsBars/StatsBars.module.css
@@ -11,22 +11,21 @@
 }
 
 .bar {
-    background: aqua;
     position: absolute;
     height: 100%;
     top: 0;
     z-index: -1;
-    transition: width ease-in-out 0.5s;
+    transition: width ease-in-out 0.5s, background-color ease-in-out 0.5s;
 }
 
 .cpuBar {
-    background: #6fb246;
+    background-color: #6fb246;
 }
 
 .memoryBar {
-    background: #1896d1;
+    background-color: #1896d1;
 }
 
 .storageBar {
-    background: #8bcbde;
+    background-color: #8bcbde;
 }
